# camstat

./: .pre-commit-config.yaml  Makefile  README.md  config.toml  main.py  pyproject.toml
.github/workflows/: ci.yaml
camstat/: __init__.py  config.py  entry.py  os_info.py  output.py  singleton.py  strategy.py  util.py
tests/: __init__.py  test_config.py  test_os_retrieval_strategy.py  test_util.py
