[tool.poetry]
name = "camstat"
version = "0.1.0"
description = ""
authors = ["camille-004 <dunningcamille@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
psutil = "^5.9.8"
pydantic = "^2.7.1"
toml = "^0.10.2"
types-toml = "^0.10.8.20240310"
types-psutil = "^5.9.5.20240511"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
flake8 = "^7.0.0"
isort = "^5.13.2"
pytest = "^8.2.0"
mypy = "^1.10.0"
pre-commit = "^3.7.1"

[tool.poetry.scripts]
camstat = "main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
